Adding StudentDB SQL Server project, DataAccessLayer and Updating Student Controller

--- a/MyFirstMVCProject/MyFirstMVCProject.csproj
+++ b/MyFirstMVCProject/MyFirstMVCProject.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="DataAccessLayer\DBContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
